--- a/web/index.html
+++ b/web/index.html
@@ -26,6 +26,9 @@
   <meta name="apple-mobile-web-app-title" content="Ben Weschler">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
+  <!-- Browser header color -->
+  <meta name="theme-color" content="#000000">
+
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
